@@ -1,4 +1,5 @@
 libece 0.3a-wip (DD/MM/YYYY):
+	- bindings: basic swig-based python bindings
 	- fixes: minor leak in Client::run; ECE_RC_TIMEOUT sometimes not being returned
 	- config: improved defaults handling
 	- build: runtime prefix by setting ECE_PREFIX_PATH
